# tekon-utils

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  bitbucket-pipelines.yml
.github/workflows/: codeql.yml
tekon/: CMakeLists.txt  message.c  message.h  pack.c  pack.h  proto.c  proto.h  tekon.h  time.c  time.h  unpack.c  unpack.h
tekon/test/: CMakeLists.txt  unit_pack.c  unit_proto.c  unit_time.c  unit_unpack.c
test/: CMakeLists.txt  minunit.h  suite_arch.sh  suite_msr.sh  suite_sync.sh
test/app/: CMakeLists.txt  link.c  read_msr.c
utils/: CMakeLists.txt
utils/arch/: CMakeLists.txt  arch.c  arch.h  main.c
utils/arch/test/: CMakeLists.txt  unit_arch.c
utils/base/: CMakeLists.txt  base.h  link.h  log.c  log.h  string.c  string.h  time.h  tstamp.c  tstamp.h  types.c  types.h
utils/base/linux/: link.c  time.c
utils/base/test/: CMakeLists.txt  unit_link.c  unit_time.c  unit_tstamp.c  unit_types.c
utils/base/win/: link.c  time.c
utils/msr/: CMakeLists.txt  main.c  msr.c  msr.h
utils/msr/test/: CMakeLists.txt  unit_msr.c
utils/sync/: CMakeLists.txt  check.c  check.h  main.c
utils/sync/test/: CMakeLists.txt  unit_check.c
